--- a/.github/workflows/hacs.yaml
+++ b/.github/workflows/hacs.yaml
@@ -1,7 +1,7 @@
 name: Validate with HACS
 
 on:
-  pull_request: {}            # ← explicitly an empty mapping
+  pull_request: {}
   push:
     branches:
       - main
@@ -9,11 +9,15 @@ on:
 jobs:
   hacs:
     runs-on: ubuntu-latest
-    name: HACS Action
+    name: Validate HACS Integration
     steps:
       - uses: actions/checkout@v4
 
       - uses: hacs/action@main
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          # token for the HACS Action to comment on your PR
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          # this is an Integration
           category: integration
+          # your integration lives at the repo root
+          repository: "."
