--- a/.github/workflows/hacs.yaml
+++ b/.github/workflows/hacs.yaml
@@ -3,8 +3,7 @@ name: Validate with HACS
 on:
   pull_request: {}
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   hacs:
@@ -15,9 +14,6 @@ jobs:
 
       - uses: hacs/action@main
         with:
-          # token for the HACS Action to comment on your PR
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          # this is an Integration
           category: integration
-          # your integration lives at the repo root
-          repository: "."
+          repository: ${{ github.repository }}
