--- a/.github/workflows/hacs.yaml
+++ b/.github/workflows/hacs.yaml
@@ -1,16 +1,13 @@
-name: Validate HACS
-
+name: HACS Validation
 on:
-  pull_request:
   push:
-
+  pull_request:
+  workflow_dispatch:
 jobs:
-  validate:
-    name: Validate HACS
+  hacs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: hacs/action@main
         with:
           category: integration
-          repository: tzachb/Homeseer-HA
