--- a/custom_components/homeseer/manifest.json
+++ b/custom_components/homeseer/manifest.json
@@ -7,5 +7,6 @@
   "dependencies": [],
   "codeowners": ["@tzachb"],
   "requirements": [],
-  "iot_class": "local_polling"
+  "iot_class": "local_polling",
+  "integration_type": "hub"
 }
